k8s/frappe/03-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: frappe
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: frappe
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: bitnami/mariadb:11.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /bitnami/mariadb
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mariadb-pvc
