k8s/frappe/04-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: frappe
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: frappe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: bitnami/redis:6.2
          args: ["--save", "", "--appendonly", "no"]
          ports:
            - containerPort: 6379
